# teziovsky-blogging-platrofm-api-python

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0b8d6ed73611_create_post_table.py  18edf96d316f_create_post_table.py  1d9e9ebcb374_make_title_content_category_not_null.py  d2a581485ee6_create_post_table.py
app/: main.py
database/: config.py  models.py  registry.py  seeder.py
routers/: posts.py
schemas/: post.py
